Bug 579648 - Fixed adapter type sorting
Change-Id: Id98a4ebb263866af867fba5b134a6ed2bfaa404e